build distributable package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "files": [
-    "index.ts"
-  ],
+  "include": ["src"],
   "compilerOptions": {
     "module": "ESNext",
     "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "outDir": "dist"
   }
 }
