--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "private": true,
   "name": "@exopen/types",
-  "main": "index.ts"
+  "main": "dist/index.ts",
+  "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=16",
+    "pnpm": ">=7"
+  },
+  "scripts": {
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.4"
+  }
 }
