--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pnpm": ">=7"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build:watch": "tsc -w"
   },
   "devDependencies": {
     "typescript": "^4.8.4"
